--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
     "sass": "^1.56.1"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
